# testing-practice

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  converter.cpp  converter.h  main.cpp
src/sentence/: CMakeLists.txt  sentence.cpp  sentence.h
test/: CMakeLists.txt  tst_century_from_year_calculator.cpp  tst_reverse_words.cpp  unit.cpp
